# rudy

./: .gitattributes  .gitignore  LICENSE  README.md
crates/: Cargo.toml
crates/.cargo/: config.toml
crates/cortex/: ARCHITECTURE.md  Cargo.toml  build.rs
crates/cortex/src/: audit.rs  boot_orchestrator.rs  config.rs  discovery.rs  inventory.rs  lib.rs  limb.rs  limb_health.rs  main.rs  param_sync.rs  server.rs  util.rs
crates/cortex/src/api/: commission.rs  config_route.rs  control.rs  error.rs  hardware.rs  health.rs  jog.rs  lock_gate.rs  mod.rs  motion.rs  onboard.rs  params.rs  predefined_home.rs  rename.rs  system.rs  tests.rs
crates/cortex/src/api/inventory/: devices.rs  hardware.rs  mod.rs  motor.rs  onboard.rs  record.rs  rename.rs
crates/cortex/src/api/meta/: config.rs  health.rs  health_tests.rs  logs.rs  mod.rs  settings.rs
crates/cortex/src/app/: bootstrap.rs  mod.rs  state.rs
crates/cortex/src/can/: angle.rs  backoff.rs  backoff_tests.rs  bus_worker.rs  discovery.rs  discovery_tests.rs  home_ramp.rs  home_ramp_band_edge_distance_tests.rs  home_ramp_band_gate_tests.rs  home_ramp_dwell_tests.rs  home_ramp_position_hold_tests.rs  home_ramp_real_can_stub_tests.rs  home_ramp_tracking_gate_tests.rs  linux.rs  math.rs  math_tests.rs  mock.rs  mod.rs  motion.rs  motor_frame.rs  slow_ramp.rs  slow_ramp_band_edge_distance_tests.rs  slow_ramp_band_gate_tests.rs  slow_ramp_real_can_stub_tests.rs  slow_ramp_tracking_gate_tests.rs  stub.rs  travel.rs  travel_path_check_tests.rs  travel_tests.rs
crates/cortex/src/config/: can.rs  config_tests.rs  http.rs  logs.rs  mod.rs  paths.rs  runtime_db.rs  safety.rs  telemetry.rs  webtransport.rs
crates/cortex/src/deployment/: mod.rs
crates/cortex/src/hardware/: mod.rs
crates/cortex/src/http/: headers.rs  mod.rs  server.rs  spa.rs
crates/cortex/src/motion/: controller.rs  intent.rs  mit.rs  mod.rs  motion_tests.rs  preflight.rs  registry.rs  smoothing.rs  status.rs  tick.rs  wave.rs
crates/cortex/src/observability/: mod.rs  reminders.rs  telemetry.rs
crates/cortex/src/settings/: data.rs  init.rs  merge.rs  mod.rs  registry.rs  validate.rs
crates/cortex/src/types/: logs.rs  meta.rs  mod.rs  motor.rs  reminders.rs  safety.rs  settings.rs  system.rs  tests.rs  wt.rs
crates/cortex/src/webtransport/: client_frames.rs  client_frames_tests.rs  listener.rs  mod.rs  session.rs
crates/cortex/tests/: api_contract.rs  boot_orchestrator_lifecycle.rs  can_stub.rs  daemon_lifecycle.rs  inventory_migration.rs  motion_lifecycle.rs  motion_preflight.rs  motion_wave_envelope.rs  wt_codec.rs
crates/cortex/tests/api/: control.rs  endpoints.rs  inventory.rs  meta.rs  motion.rs  ops.rs  params.rs
crates/cortex/tests/can/: common.rs  feedback_broadcast.rs  stub.rs
crates/cortex/tests/common/: fixtures.rs  mod.rs
crates/rudyd/: Cargo.toml  build.rs
crates/rudyd/src/: audit.rs  auth.rs  config.rs  inventory.rs  main.rs  server.rs  spec.rs  state.rs  telemetry.rs  types.rs  util.rs  wt.rs
crates/rudyd/src/api/: config_route.rs  control.rs  motors.rs  params.rs
crates/rudyd/src/can/: mock.rs  mod.rs
crates/rudyd/static/: index.html
crates/rudyd/static/assets/: index-BOYYwoWj.js
crates/rudydae/: Cargo.toml  build.rs
crates/rudydae/src/: audit.rs  auth.rs  boot_orchestrator.rs  boot_state.rs  config.rs  discovery.rs  inventory.rs  lib.rs  limb.rs  limb_health.rs  log_layer.rs  main.rs  reminders.rs  server.rs  spec.rs  state.rs  system.rs  telemetry.rs  types.rs  util.rs  wt.rs  wt_client.rs  wt_router.rs
crates/rudydae/src/api/: commission.rs  config_route.rs  control.rs  devices.rs  estop.rs  hardware.rs  home.rs  home_all.rs  inventory_route.rs  jog.rs  lock.rs  logs.rs  mod.rs  motion.rs  motors.rs  onboard.rs  params.rs  predefined_home.rs  reminders_route.rs  rename.rs  restore_offset.rs  tests.rs  travel.rs
crates/rudydae/src/can/: auto_recovery.rs  backoff.rs  bus_worker.rs  linux.rs  mock.rs  mod.rs  motion.rs  slow_ramp.rs  travel.rs
crates/rudydae/src/motion/: controller.rs  intent.rs  mod.rs  preflight.rs  registry.rs  sweep.rs  wave.rs
crates/rudydae/static/: index.html
crates/rudydae/static/assets/: index-2LTf7R_2.css  index-BOYYwoWj.js.map  index-BpDpEy6A.css  index-BwIQW6he.js  index-BwIQW6he.js.map  index-CYnLX9AZ.css  index-DfzbBLkP.js  index-DfzbBLkP.js.map  index-DoBahoas.js  index-DoBahoas.js.map
crates/rudydae/tests/: api_contract.rs  boot_orchestrator_lifecycle.rs  can_stub.rs  daemon_lifecycle.rs  feedback_broadcast.rs  inventory_migration.rs  motion_lifecycle.rs  wt_codec.rs
crates/rudydae/tests/common/: mod.rs
src/driver/: CMakeLists.txt  Cargo.toml  package.xml
src/driver/src/: lib.rs  main.rs  socketcan_bus.rs  state_machine.rs
src/driver/src/robstride/: mod.rs
src/driver/src/rs03/: actuator.rs  comm_types.rs  errors.rs  feedback.rs  frame.rs  mod.rs  params.rs
src/murphy_driver/: CMakeLists.txt  Cargo.toml  README.md  package.xml
src/murphy_driver/src/: lib.rs  main.rs  socketcan_bus.rs  state_machine.rs
src/murphy_simulation/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
src/murphy_simulation/configs/: actuator_model.yaml  domain_rand.yaml
src/murphy_simulation/launch/: sim_stub.launch.xml
src/murphy_simulation/murphy_simulation/: __init__.py
src/murphy_simulation/murphy_simulation/envs/: __init__.py  murphy_env.py
src/murphy_simulation/murphy_simulation/scripts/: __init__.py  train.py
src/murphy_simulation/test/: test_config_yaml.py
src/rudy_control/: CMakeLists.txt  README.md  package.xml  rudy_control_plugins.xml
src/rudy_control/config/: controllers.yaml
src/rudy_control/include/rudy_control/: rudy_topic_loopback_hardware.hpp
src/rudy_control/src/: rudy_topic_loopback_hardware.cpp
src/rudy_control/test/: test_loopback_smoke.cpp
src/rudy_driver/: CMakeLists.txt  Cargo.toml  README.md  package.xml
src/rudy_driver/src/: main.rs  protocol.rs
src/rudy_tests/: CMakeLists.txt  README.md  package.xml
src/rudy_tests/test/: test_robot_state_headless.launch.py
src/tests/: CMakeLists.txt  README.md  package.xml
(+631 files in other folders)
