[workspace]
resolver = "2"
members = ["rudydae"]

# Non-ROS Rust lives here. The `driver` crate stays in `ros/src/driver/`
# because it is a hybrid ament_cmake / Cargo package today; `rudydae` depends on
# it by relative path. If/when `driver` is split into a pure library crate +
# a thin `ros/src/driver_node/` ament wrapper (see ADR-0004), the library
# moves here and joins `members`.

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/joeylacombe/rudy"

[workspace.dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
