[workspace]
resolver = "2"
members = ["rudydae"]

# Non-ROS Rust lives here. The `driver` crate stays in `ros/src/driver/`
# because it is a hybrid ament_cmake / Cargo package today; `rudydae` depends on
# it by relative path. If/when `driver` is split into a pure library crate +
# a thin `ros/src/driver_node/` ament wrapper (see ADR-0004), the library
# moves here and joins `members`.

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/joeylacombe/rudy"

[workspace.dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Explicit tokio feature set instead of `"full"`. Audited against actual
# usage in rudydae (the only workspace member that uses tokio): macros for
# `#[tokio::main]` / `#[tokio::test]`, rt-multi-thread for the runtime +
# `spawn`/`spawn_blocking`/`JoinSet`, sync for `broadcast` + async `Mutex`,
# time for `sleep`/`interval`/`Instant`, signal for `ctrl_c`. We do NOT
# use `tokio::net`, `tokio::fs`, `tokio::io::*`, or `tokio::process`
# directly -- axum/hyper/wtransport activate whichever sub-features they
# need themselves via cargo feature unification, so dropping `"full"`
# only removes what nobody else asked for. Speeds up cold builds and
# trims the dep graph (parking_lot, mio extras, etc.).
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
