[package]
name = "cortex"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Cortex daemon: CAN bus owner, REST + WebTransport surface"
# Two bins (`cortex`, `migrate_inventory`); `cargo run` must target one.
default-run = "cortex"

[lib]
name = "cortex"
path = "src/lib.rs"

[[bin]]
name = "cortex"
path = "src/main.rs"

[[bin]]
name = "migrate_inventory"
path = "src/bin/migrate_inventory.rs"

# REST contract suites under `tests/api/`. Cargo only auto-discovers `tests/*.rs`, so each
# file needs an explicit `[[test]]` root (see The Cargo Book: integration tests).
[[test]]
name = "api_control"
path = "tests/api/control.rs"
[[test]]
name = "api_endpoints"
path = "tests/api/endpoints.rs"
[[test]]
name = "api_inventory"
path = "tests/api/inventory.rs"
[[test]]
name = "api_meta"
path = "tests/api/meta.rs"
[[test]]
name = "api_motion"
path = "tests/api/motion.rs"
[[test]]
name = "api_ops"
path = "tests/api/ops.rs"
[[test]]
name = "api_params"
path = "tests/api/params.rs"

# CAN-layer integration tests under `tests/can/` (mock spawn, non-Linux stub).
[[test]]
name = "can_stub"
path = "tests/can/stub.rs"
[[test]]
name = "feedback_broadcast"
path = "tests/can/feedback_broadcast.rs"

[dependencies]
# Core async + error plumbing
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures-util = "0.3"

# Config
toml = "0.8"
serde_yaml = "0.9"

# HTTP / REST
axum = { version = "0.7", features = ["macros", "json"] }
# Plaintext HTTP only; TLS is terminated upstream by `tailscale serve` on the
# Pi (see ADR-0004 addendum). WebTransport does its own TLS via wtransport.
axum-server = { version = "0.7" }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "fs"] }
http = "1"
hyper = "1"

# Static-asset embed (SPA from link/dist)
rust-embed = { version = "8", features = ["include-exclude"] }
mime_guess = "2"

# WebTransport / HTTP3
# wtransport pins its own rustls/quinn versions; we follow it.
wtransport = "0.6"

# rustls 0.23 requires the process to pick a CryptoProvider before any TLS
# object is constructed (otherwise both axum-server and wtransport panic on
# startup with "Could not automatically determine the process-level
# CryptoProvider"). We depend on rustls directly so we can call
# `ring::default_provider().install_default()` from main().
#
# We use the `ring` provider (not `aws-lc-rs`) because:
#   1. `ring` is already pulled in unconditionally by `quinn-proto`, `rcgen`,
#      and `rustls-webpki` (transitive deps of wtransport), so this adds zero
#      new transitive crates.
#   2. `aws-lc-rs` would otherwise pull in `aws-lc-sys`, a large C/C++ crate
#      built via cmake. On the aarch64 cross-build that single crate dominates
#      wallclock compile time. Dropping it shaves several minutes off cold
#      release builds. (Verified with `cargo tree -i aws-lc-rs` -- the only
#      thing pulling it in was this very `features = ["aws-lc-rs"]` line.)
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }

# Shared type codegen: see crates/.cargo/config.toml (TS_RS_EXPORT_DIR) + link/package.json gen:types
ts-rs = { version = "12", features = ["serde-json-impl", "chrono-impl"] }

# CBOR for WebTransport datagrams
ciborium = "0.2"

# Identifiers / misc
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Atomic file writes for inventory.yaml mutations.
tempfile = "3"

# Persistent log store. `bundled` ships the C source so the cross-build
# for the Pi doesn't depend on a system libsqlite (and dev hosts don't
# need one either). WAL mode keeps writes from blocking readers; the
# whole connection stays on a single tokio::task::spawn_blocking thread
# (see `src/log_store.rs`) so we don't need rusqlite's `Send` shenanigans.
rusqlite = { version = "0.32", features = ["bundled"] }

# ROS-workspace driver crate (RS03 protocol, SocketCAN on Linux).
# Kept as a relative path; see ADR-0004 §D8 for why it stays in ros/src/.
driver = { path = "../../ros/src/driver" }

# Pin per-bus worker threads to a CPU on Linux (Pi 5: one core per limb,
# leaving core 0 to the kernel + tokio runtime). Cross-platform with a
# silent no-op on dev hosts. See `crates/cortex/src/can/worker/mod.rs`.
[target.'cfg(target_os = "linux")'.dependencies]
core_affinity = "0.8"
sd-notify = "0.4"

[build-dependencies]
walkdir = "2"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tempfile = "3"
http-body-util = "0.1"
ciborium = "0.2"
