[package]
name = "rudy_driver"
version = "0.1.0"
edition = "2021"
description = "Rudy Robstride CAN driver (SocketCAN + protocol). ROS 2 packaging via ament_cmake."
license = "Apache-2.0"

[lib]
name = "rudy_driver"
path = "src/lib.rs"

[[bin]]
name = "rudy_driver_node"
path = "src/main.rs"

[dependencies]
log = "0.4"
env_logger = "0.11"
thiserror = "1.0"

[target.'cfg(target_os = "linux")'.dependencies]
embedded-can = "0.4"
socketcan = { version = "3.5", default-features = false, features = ["blocking"] }

[dev-dependencies]
